--- a/admidio-events.css
+++ b/admidio-events.css
@@ -2,7 +2,7 @@
  * Plugin Name: Admidio Events
  * Plugin URI:  http://fechten-in-waldkirch.de/
  * Description: A widget that displays dates from Admidio's dates module via RSS.
- * Version:     0.3.2
+ * Version:     0.3.3
  * Author:      Ulrik Schoth
  * Author URI:  http://fechten-in-waldkirch.de/kontakt/webmaster/
  * 
@@ -26,18 +26,33 @@
  */
 
 .admidio-events .widget-title {
-	cursor: pointer;
+	display: inline-flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	width: 100%;
 }
 
-.admidio-events .widget-title .icon{
+.admidio-events .widget-title .text {
+	margin-right: 10px;
+}
+
+.admidio-events .widget-title .icon {
 	font: 24px Genericons;
 	color: #141412;
-	float: right;
+	cursor: pointer;
+	padding: 1px 1px 1px 3px;
 }
-.admidio-events .widget-title .icon-expand:after{
+
+.admidio-events .widget-title .icon:hover {
+	border: 1px solid;
+	padding: 0px 0px 0px 2px;
+}
+
+.admidio-events .widget-title .icon-expand:after {
 	content: "\f431";
 }
-.admidio-events .widget-title .icon-collapse:after{
+
+.admidio-events .widget-title .icon-collapse:after {
 	content: "\f432";
 }
 
@@ -46,10 +61,6 @@
 	margin-left: 5px;
 }
  
- .admidio-events p {
-    margin-bottom: 0px;
-}
-
 .admidio-events-title-strong {
     font-weight: bold;
 }
