--- a/admidio-events.css
+++ b/admidio-events.css
@@ -2,7 +2,7 @@
  * Plugin Name: Admidio Events
  * Plugin URI:  http://fechten-in-waldkirch.de/
  * Description: A widget that displays dates from Admidio's dates module via RSS.
- * Version:     0.3.3
+ * Version:     0.3.2
  * Author:      Ulrik Schoth
  * Author URI:  http://fechten-in-waldkirch.de/kontakt/webmaster/
  * 
@@ -26,33 +26,18 @@
  */
 
 .admidio-events .widget-title {
-	display: inline-flex;
-	justify-content: space-between;
-	align-items: flex-start;
-	width: 100%;
+	cursor: pointer;
 }
 
-.admidio-events .widget-title .text {
-	margin-right: 10px;
-}
-
-.admidio-events .widget-title .icon {
+.admidio-events .widget-title .icon{
 	font: 24px Genericons;
 	color: #141412;
-	cursor: pointer;
-	padding: 1px 1px 1px 3px;
+	float: right;
 }
-
-.admidio-events .widget-title .icon:hover {
-	border: 1px solid;
-	padding: 0px 0px 0px 2px;
-}
-
-.admidio-events .widget-title .icon-expand:after {
+.admidio-events .widget-title .icon-expand:after{
 	content: "\f431";
 }
-
-.admidio-events .widget-title .icon-collapse:after {
+.admidio-events .widget-title .icon-collapse:after{
 	content: "\f432";
 }
 
@@ -61,6 +46,10 @@
 	margin-left: 5px;
 }
  
+ .admidio-events p {
+    margin-bottom: 0px;
+}
+
 .admidio-events-title-strong {
     font-weight: bold;
 }
