Handling of SimplePie auto-detection feature (which cannot be used here).
git-svn-id: https://plugins.svn.wordpress.org/admidio-events/trunk@940266 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admidio-events.css
+++ b/admidio-events.css
@@ -1,10 +1,10 @@
 /**
  * Plugin Name: Admidio Events
- * Plugin URI:  http://fechten-in-waldkirch.de/
+ * Plugin URI:  http://wordpress.org/plugins/admidio-events/
  * Description: A widget that displays event data from the online membership management system Admidio.
- * Version:     0.3.6
+ * Version:     0.3.7
  * Author:      Ulrik Schoth
- * Author URI:  http://fechten-in-waldkirch.de/kontakt/webmaster/
+ * Author URI:  http://profiles.wordpress.org/fiwad/
  * 
  * Module:      admidio-events.css
  * Description: Support for handling of expanded and collapsed view.
