Added color picker for date color.
git-svn-id: https://plugins.svn.wordpress.org/admidio-events/trunk@940691 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/admidio-events.css
+++ b/admidio-events.css
@@ -44,8 +44,7 @@
 }
 
 .admidio-events .widget-title .icon {
-	font: 24px Genericons;
-	color: #141412;
+	font: 120% Genericons;
 }
 
 .admidio-events .widget-title .icon-expand:after {
@@ -57,7 +56,6 @@
 }
 
 .admidio-events .event-date {
-	color: #686758;
 	margin-left: 10px;
 }
  
